add incidents, improve photos uploading
